@@ -40,7 +40,21 @@
     </blockquote>
 
     <% if defined?(TG_ADMIN_EMAIL) and not TG_ADMIN_EMAIL.blank? and defined?(TG_ADMIN_ADDRESS) and not TG_ADMIN_ADDRESS.blank? %>
-      <div><span class="label label-info">Important:</span> Please remember you need <strong>3 letters of recommendation</strong>!</div>
+      <div><span class="label label-info">Important:</span> Please remember you need <strong>3 letters of recommendation</strong> and <strong>a letter from your potential preceptor!</div>
+
+      <div class="control-group" style="margin-top:10px">
+        <%= f.label :letters_from_a, 'My Recommendation Letters will be from', class: 'control-label' %>
+        <div class="controls">
+          <%= f.text_field :letters_from_a %>
+        </div>
+        <div class="controls">
+          <%= f.text_field :letters_from_b %>
+        </div>
+        <div class="controls">
+          <%= f.text_field :letters_from_c %>
+        </div>
+      </div>
+
 
       <dl class="dl-horizontal">
         <dt>Email</dt>
