@@ -24,4 +24,14 @@
 
   <dt>Personal statement</dt>
   <dd><%= applicant.personal_statement %></dd>
+
+  <dt title="Recommendation Letter From">Recommendation Letter From</dt>
+  <dd><%= applicant.letters_from_a %></dd>
+
+  <dt title="Recommendation Letter From">Recommendation Letter From</dt>
+  <dd><%= applicant.letters_from_b %></dd>
+
+  <dt title="Recommendation Letter From">Recommendation Letter From</dt>
+  <dd><%= applicant.letters_from_c %></dd>
+
 </dl>
